# btreemapped

./: .gitignore  .release-please-manifest.json  1.sql  Cargo.toml  PLAN.md  PROMPT.md  README.md  RESEARCH.md  TODO.md  compose.yml  justfile  release-please-config.json  rustfmt.toml
.github/workflows/: ci.yml  release-please.yml
btreemapped/: CHANGELOG.md  Cargo.toml
btreemapped/examples/: basic.rs
btreemapped/src/: cell.rs  etl_store.rs  json.rs  lib.rs  lindex.rs  lvalue.rs  multi_sink.rs  numeric.rs  old_sink.rs  replica.rs  replication_state.rs  replicator.rs  sink.rs  sink_state.rs
btreemapped/src/lvalue/: borrow_impls.rs  mod.rs
btreemapped/tests/: integration_test.rs  test_cdc_events.rs  test_error_recovery.rs  test_json_replication.rs  test_parse_errors.rs  test_replication.rs  test_sqlx.rs
btreemapped/tests/utils/: mod.rs
btreemapped_derive/: CHANGELOG.md  Cargo.toml
btreemapped_derive/src/: derive_btreemapped.rs  derive_pg_schema.rs  impl_for_range.rs  lib.rs
