[workspace]
members = ["btreemapped", "btreemapped_derive"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "*"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
paste = "1"
pg_replicate = { git = "https://github.com/architect-xyz/pg_replicate.git" }
postgres-types = "*"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
testcontainers = "0.25"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tokio-postgres = "0.7"
