[workspace]
members = ["btreemapped", "btreemapped_derive"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1", features = ["try_into"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
paste = "1"
etl = { git = "https://github.com/architect-xyz/etl.git", rev = "978af896f9d99c5ba525614e17aca9046f1d506f", default-features = false }
etl-postgres = { git = "https://github.com/architect-xyz/etl.git", rev = "978af896f9d99c5ba525614e17aca9046f1d506f", default-features = false, features = [
    "replication",
] }
postgres-types = "*"
# postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
rand = "0.8"
rust_decimal = { version = "1", features = ["db-postgres"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "rust_decimal",
] }
testcontainers = "0.25"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
trait-gen = "0.3"
uuid = "1"

# For local development; uncomment as needed
# etl = { path = "../etl/etl", default-features = false }
# etl-postgres = { path = "../etl/etl-postgres", default-features = false, features = [
#     "replication",
# ] }
