[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["database", "data-structures"]
description = "BTreeMap-based Postgres replication"
documentation = "https://docs.rs/btreemapped"
edition = "2021"
homepage = "https://www.architect.co"
keywords = ["postgres", "database", "replication", "btreemap"]
license = "MIT"
name = "btreemapped"
version = "0.2.0"

[[example]]
name = "basic"

[features]
derive = []

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
btreemapped_derive = { version = "0.1.0", path = "../btreemapped_derive" }
bytes = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true, optional = true }
parking_lot = { workspace = true }
paste = { workspace = true }
pg_replicate = { workspace = true }
postgres-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
postgres-types = { workspace = true, features = ["with-chrono-0_4", "with-serde_json-1"] }
serde_json = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true }
