[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["database", "data-structures"]
description = "BTreeMap-based Postgres replication"
documentation = "https://docs.rs/btreemapped"
edition = "2021"
homepage = "https://www.architect.co"
keywords = ["postgres", "database", "replication", "btreemap"]
license = "MIT"
name = "btreemapped"
version = "0.3.0"

[[example]]
name = "basic"

[features]
all = ["env_logger", "rust_decimal", "sqlx"]
derive = []
sqlx = ["rust_decimal", "dep:sqlx"]

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
btreemapped_derive = { version = "0.2.0", path = "../btreemapped_derive" }
bytes = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
env_logger = { workspace = true, optional = true }
futures = { workspace = true }
log = { workspace = true, optional = true }
parking_lot = { workspace = true }
paste = { workspace = true }
etl = { workspace = true }
etl-postgres = { workspace = true }
postgres-types = { workspace = true, features = ["with-serde_json-1"] }
rand = { workspace = true }
rust_decimal = { workspace = true, optional = true, features = ["maths"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-util = { workspace = true }
trait-gen = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
postgres-types = { workspace = true, features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
